[package]
name = "plugin-example"
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tugraph = { path = "../"}
plugin-util = { path = "../plugin-util" }
