[package]
name = "plugin-example"
version = "0.1.2"
rust-version = "1.65.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tugraph = { path = "../", version = "0.1.3"}
tugraph-plugin-util = { path = "../plugin-util", version = "0.1.2"}
