[package]
name = "plugin_util-proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "mod.rs"

[dependencies]
quote = "1.0"
proc-macro2 =  { version = "1.0", features = ["proc-macro"] }

